package com.chucknorris.auth.models.dto;

public record LoginRequestDto(String username, String password) {}